# bots_brokerwiz

./: .env.example  .gitignore  Dockerfile  README.md  acl.conf  docker-compose.yml  docker-entrypoint.sh  generate_certs.sh  mosquitto.conf  nginx-production.conf  nginx-simple.conf  nginx.txt  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt
.github/workflows/: deploy.yml
app/: main.py
app/middleware/: auth.py
app/models/: __init__.py  insurance_schemas.py  job.py  responses.py
app/routes/: __init__.py  cotizaciones.py  dlq.py  health.py  logs.py  metrics.py
app/services/: __init__.py  dlq_manager.py  insurance_config.py  metrics_collector.py  mqtt_service.py  payload_validator.py
app/templates/: api_examples.http
config/: constants.py  insurance_config.json  logging_config.py  settings.py
docs/: deploy-reference.md  guia-desarrollo-bots.md  integracion-bots-y-apis.md  manual-testing-full.md  manual-testing.md  request-tracking.md
mosquitto/: mqtt_service.py  mqtt_stats_client.py
mosquitto/config/: mosquitto.conf
planeacion/: integracion-bots-y-apis.md  plan.md
scripts/: api.sh  deploy.sh  docker-entrypoint.sh  health_monitor.sh  mosquitto.sh  setup-vm.sh  setup.sh  start_api.py  worker.sh
scripts/cron.d/: brokerwiz-health
tests/: conftest.py  run_bot.py  test_api.py  test_bot_execution.py  test_mqtt_service.py
tests/integration/: test_api_integration.py
tests/test_workers/: __init__.py  (+6 more)
workers/: __init__.py  error_classifier.py  errors.py  log_parser.py  models.py  mqtt_worker.py  resource_manager.py  retry_manager.py
(+19 files in other folders)
